finshed site with css and added extra pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>My Home Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400&family=Major+Mono+Display&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -287,6 +291,7 @@
         <p>Kusumi quickly added that this isn't something that is going to happen tomorrow, but maybe by the end of the
             century.</p>
     </div>
+    <script src="navbar.v01.js"></script>
 </body>
 
 </html>
